src/commands/picker/snapshots/wt__commands__picker__items__tests__cache_hit.snap
---
source: src/commands/picker/items.rs
expression: "cache_hit.preview_for_mode(PreviewMode::Summary, 80, 40)"
---
[1mAdd auth module[0m

Implements JWT-based authentication.
