src/commands/picker/snapshots/wt__commands__picker__items__tests__cache_miss.snap
---
source: src/commands/picker/items.rs
expression: "cache_miss.preview_for_mode(PreviewMode::Summary, 80, 40)"
---
[2m↳[22m [2mGenerating summary…[22m
