src/commands/picker/snapshots/wt__commands__picker__items__tests__direct.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::compute_summary_preview(&main_item)"
---
[2m○[22m Generating summary...

Press 5 again to refresh once generation completes.
