src/commands/picker/snapshots/wt__commands__picker__items__tests__empty_upstream_and_summary.snap
---
source: src/commands/picker/items.rs
expression: "render_preview_tabs(PreviewMode::WorkingTree,\nTabAvailability::worktree(LocalContent::default(), false, false, false),\nWIDE,)"
---
1: diff[0m[2m | [22m2: [1m[4mworking[22m[24m[0m[2m | [22m3: committed[0m[2m | [22m4: log[0m[2m | [22m5: [2mremote⇅[22m[0m[2m | [22m6: [2msummary[22m[0m[2m | [22m7: [2mpr[22m[0m[2m | [22m8: [2mcomments[22m[0m
[36m[2mEnter: switch | ctrl-u/d: scroll | Tab/alt-1…8: preview | alt-c: create | alt-x: remove | alt-y: copy | alt-o: open | alt-r: refresh | alt-p: toggle | Esc: cancel[39m[22m[0m
