src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_branch_diff.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::loading_placeholder(mode)"
---
[2m↳[22m [2mLoading branch diff…[22m
