src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_log.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::loading_placeholder(mode)"
---
○ Loading log…
