src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_pr.snap
---
source: src/commands/picker/items.rs
expression: "WorktreeSkimItem::loading_placeholder(mode)"
---
[2m○[22m[0m PR previews appear on [1mwt switch --prs[22m[0m rows — the CI column shows this branch's PR number
