src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_summary.snap
---
source: src/commands/picker/items.rs
expression: "PickerRow::loading_placeholder(mode)"
---
[2m↳[22m [2mGenerating summary…[22m
