src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_unified_diff.snap
---
source: src/commands/picker/items.rs
expression: "PickerRow::loading_placeholder(mode)"
---
[2m↳[22m [2mLoading complete diff…[22m
