src/commands/picker/snapshots/wt__commands__picker__items__tests__loading_placeholder_upstream_diff.snap
---
source: src/commands/picker/items.rs
expression: "PickerRow::loading_placeholder(mode)"
---
[2m↳[22m [2mLoading upstream diff…[22m
